--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -109,3 +109,81 @@ body {
   cursor: pointer;
   background-color: rgba(210, 230, 255, 1);
 }
+
+/* CSS used here will be applied after bootstrap.css */
+
+
+.competition-podium {
+  height: 230px;
+  //position: relative;
+  width: 350px;
+  //margin:50px;
+  display: inline-block;
+}
+.competition-podium .podium-block {
+  width: 110px;
+  text-align: left;
+  display: inline-block;
+  position: absolute;
+  bottom: 0;
+}
+.competition-podium .podium-block .place {
+  font-size: 1em;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 15px;
+}
+.competition-podium .podium-block .sum {
+  font-size: 1.2em;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 70px;
+}
+
+.competition-podium .podium-block.bronze {
+  color: #e6d6bf;
+  left: 10px;
+}
+.competition-podium .podium-block.bronze .podium {
+  background: #e6d6bf;
+}
+.competition-podium .podium-block.bronze .name {
+  color: #856e4e;
+}
+
+.competition-podium .podium-block.gold {
+  color: #E87E04;
+  left: 120px;
+}
+.competition-podium .podium-block.gold .podium {
+  background: #ead679;
+}
+.competition-podium .podium-block.gold .name {
+  color: #856e4e;
+  text-align:center
+}
+
+.competition-podium .podium-block.silver {
+  color: #cbd9de;
+  left: 230px;
+}
+.competition-podium .podium-block.silver .podium {
+  background: #cbd9de;
+}
+.competition-podium .podium-block.silver .name {
+  color: #856e4e;
+  text-align:center
+}
+.podium {
+  display: table;
+  width: 100%;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.podium > * {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  color: #4D4D4D;
+  font-size: 1.5em;
+}
