--- a/app/views/userStats.html
+++ b/app/views/userStats.html
@@ -2,104 +2,43 @@
   <div class="row">
     <div class="col-sm-3">
       <img alt="" class="avatar" height="220" ng-src="{{ avatarURL }}" width="220">
+
       <h2>{{ fullName }}</h2>
       <h4>{{ login }}</h4>
       <hr>
       <p ng-show="email !== null"><i class="glyphicon glyphicon-envelope"></i> {{ email }} </p>
+
       <p ng-show="createdAt !== null"><i class="glyphicon glyphicon-time"></i> {{ createdAt }} </p>
+
       <p ng-show="location !== null"><i class="glyphicon glyphicon-map-marker"></i> {{ location }} </p>
+
       <p ng-show="company !== null"><i class="glyphicon glyphicon-briefcase"></i> {{ company }} </p>
       <hr>
-      <p>Followers <span class="badge">{{followers}}</span>  Following <span class="badge">{{following}}</span></p>
+      <p>Followers <span class="badge">{{followers}}</span> Following <span class="badge">{{following}}</span></p>
 
-    </div><!-- /span-3 -->
+    </div>
+    <!-- /span-3 -->
     <div class="col-sm-9">
-
-      <!-- column 2 -->
-      <h3><i class="glyphicon glyphicon-dashboard"></i> Bootply Dashboard</h3>
-
+      <h3><i class="glyphicon glyphicon-stats"></i> The most commited podium</h3>
       <hr>
 
-      <div class="row">
-        <!-- center left-->
-        <div class="col-md-7">
-          <div class="well">Inbox Messages <span class="badge pull-right">3</span></div>
+      <div class="competition-podium">
+        <div class="podium-block bronze">
+          <div class="name">{{mostCommitedRepo[2].name}} <br><strong>{{mostCommitedRepo[2].commit}} commit(s)</strong></div>
+          <div class="podium"><span>3<sup>ème</sup></span></div>
+        </div>
+        <div class="podium-block gold">
+          <div class="name">{{mostCommitedRepo[0].name}} <br><strong>{{mostCommitedRepo[0].commit}} commit(s)</strong></div>
+          <div class="podium"><span>1<sup>er</sup></span></div>
+        </div>
+        <div class="podium-block silver">
+          <div class="name">{{mostCommitedRepo[1].name}} <br><strong>{{mostCommitedRepo[1].commit}} commit(s)</strong></div>
+          <div class="podium"><span>2<sup>ème</sup></span></div>
+        </div>
+      </div>
+    </div>
+    <!--/col-span-9-->
 
-          <hr>
-
-          <div class="panel panel-default">
-            <div class="panel-heading"><h4>Processing Status</h4></div>
-            <div class="panel-body">
-
-              <small>Complete</small>
-              <div class="progress">
-                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100" style="width: 72%">
-                  <span class="sr-only">72% Complete</span>
-                </div>
-              </div>
-              <small>In Progress</small>
-              <div class="progress">
-                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-                  <span class="sr-only">20% Complete</span>
-                </div>
-              </div>
-              <small>At Risk</small>
-              <div class="progress">
-                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                  <span class="sr-only">80% Complete</span>
-                </div>
-              </div>
-
-            </div><!--/panel-body-->
-          </div><!--/panel-->
-
-        </div><!--/col-->
-
-        <!--center-right-->
-        <div class="col-md-5">
-
-          <ul class="nav nav-justified">
-            <li><a href="#"><i class="glyphicon glyphicon-cog"></i></a></li>
-            <li><a href="#"><i class="glyphicon glyphicon-heart"></i></a></li>
-            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-comment"></i><span class="count">3</span></a><ul class="dropdown-menu" role="menu"><li><a href="#">1. Is there a way..</a></li><li><a href="#">2. Hello, admin. I would..</a></li><li><a href="#"><strong>All messages</strong></a></li></ul></li>
-            <li><a href="#"><i class="glyphicon glyphicon-user"></i></a></li>
-            <li><a title="Add Widget" data-toggle="modal" href="#addWidgetModal"><span class="glyphicon glyphicon-plus-sign"></span></a></li>
-          </ul>
-
-          <hr>
-
-          <p>
-            This is a responsive dashboard-style layout that uses <a href="http://www.getbootstrap.com">Bootstrap 3</a>. You can use this template as a starting point to create something more unique.
-          </p>
-          <p>
-            Visit the Bootstrap Playground at <a href="http://www.bootply.com">Bootply</a> to tweak this layout, or discover 1000's of Bootstrap code examples and snippets.
-          </p>
-
-          <hr>
-
-          <div class="btn-group btn-group-justified">
-            <a href="#" class="btn btn-info col-sm-3">
-              <i class="glyphicon glyphicon-plus"></i><br>
-              Service
-            </a>
-            <a href="#" class="btn btn-info col-sm-3">
-              <i class="glyphicon glyphicon-cloud"></i><br>
-              Cloud
-            </a>
-            <a href="#" class="btn btn-info col-sm-3">
-              <i class="glyphicon glyphicon-cog"></i><br>
-              Tools
-            </a>
-            <a href="#" class="btn btn-info col-sm-3">
-              <i class="glyphicon glyphicon-question-sign"></i><br>
-              Help
-            </a>
-          </div>
-
-        </div><!--/col-span-6-->
-
-      </div><!--/row-->
-    </div><!--/col-span-9-->
-
-  </div><!--/row-->
+  </div>
+  <!--/row-->
 </div>
