--- a/app/views/userStats.html
+++ b/app/views/userStats.html
@@ -27,7 +27,7 @@
 
       <div class="tab-content">
         <div id="stats" class="tab-pane fade in active">
-          <h3><i class="glyphicon glyphicon-stats"></i> The most commited podium</h3>
+          <h3><i class="glyphicon glyphicon-stats"></i> My most commited repos</h3>
           <hr>
 
           <div class="competition-podium">
